@@ -160,6 +160,11 @@ class Request:
       # validate the parameter
       _validate_param(name, values[0])
 
+      # only allow the magic ViewVC MIME types to be declared via CGI params
+      if (name == 'content-type') and \
+         (not values[0] in (viewcvs_mime_type, alt_mime_type)):
+        continue
+      
       # if we're here, then the parameter is okay
       self.query_dict[name] = values[0]
 
@@ -2179,8 +2184,7 @@ def view_checkout(request):
 
   # The revision number acts as a strong validator.
   if not check_freshness(request, None, revision):
-    request.server.header(request.query_dict.get('content-type')
-                          or request.mime_type or 'text/plain')
+    request.server.header(request.mime_type or 'text/plain')
     copy_stream(fp)
   fp.close()
 
